--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sansobarcelo\\AppData\\Roaming\\NetBeans\\8.1beta\\build.properties
+user.properties.file=/Users/ssb/Library/Application Support/NetBeans/8.1/build.properties
